# RL_18xx

./: .gitignore  .tmp.json.swp  CLAUDE.md  README.md  REMOTE_ACCESS.md  agent.py  company.py  core.html  game.json  game2.json  game_rules.txt  game_state.py  game_usage.md  index.html  loop_config.json  main.py  notes  player.py  private_company.py  profile_game.py  profile_mcts.py  pyproject.toml  roadmap.md  robots.txt  sandbox.ipynb  search.json  settings.ini  sitemap.xml  startup.sh  stock_market.py  stock_market_slot.py
.ipynb_checkpoints/: README-checkpoint.md  settings-checkpoint.ini
RL_18xx/: _modidx.py
_proc/: index.ipynb
actions/: bid_buy_action.py  bid_resolution_action.py
autoresearch/: build_eval_corpus.py  evaluate.py  improvement_plan.md  prepare_training_data.py  program.md  results.tsv  run_experiment.py  rust_migration_roadmap.md
docs/: PERF_OPTIMIZATION_PLAN.md  broken_games.txt  cleaning_engine_parity.csv  cleaning_engine_parity.md  full_replay_audit.csv  full_replay_audit.md  hex_transformer_prototype.py  mcts_improvements_plan.md  mcts_nn_review.md  mcts_nn_roadmap.md  multi_title_roadmap.md  network_architecture_v2.md  parity_status_2026-06.md  pretraining_rust_migration.md  rust_engine_bugs.md  rust_engine_corpus_audit.csv  rust_engine_corpus_audit.md  rust_engine_full_corpus_audit.csv  rust_engine_full_corpus_audit.md  rust_engine_review_2026-06-09.md  step1_review.md  verification_rituals.md
e30/: __init__.py  agent.py  company.py  game_state.py  main.py  player.py  private_company.py  stock_market.py  stock_market_slot.py
engine-rs/: Cargo.toml  PHASE1_PLAN.md  PHASE2_PLAN.md  PHASE3_PLAN.md  PHASE3_PROGRESS.md  PHASE4_PLAN.md  ROUTER_REWRITE_PLAN.md
engine-rs/src/: abilities.rs  action_index.rs  actions.rs  core.rs  decode.rs  encoder.rs  entities.rs  factored.rs  game.rs  graph.rs  lib.rs  map.rs  mcts.rs  router.rs  steps.rs  tiles.rs
engine-rs/src/rounds/: auction.rs  mod.rs  operating.rs  stock.rs
engine-rs/src/title/: g1830.rs  mod.rs
enums/: Phase.py  round.py
exceptions/: exceptions.py
game/: action_finder.html  engine.html  game_test.html
nbs/: 00_core.ipynb  index.ipynb
privates/: BO.py  CA.py  CS.py  DH.py  MH.py  SV.py
rl18xx/: _modidx.py  game.py  rust_adapter.py
rl18xx.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
rl_18xx.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
scripts/: audit_cleaning_engine_parity.py  audit_full_raw_corpus.py  audit_rust_engine_corpus.py  debug_seed.py  debug_self_play.py  e2e_smoke.py  full_replay_audit.py  pre-push.hook  rust_clean_check.py  smoke_all_features.sh  test_specific_games.py  trace_divergence.py  verify_pretrain_use_rust.py  view_trace.py
src/: bank.py  company.py  main.py  player.py  private_company.py  stock_market.py  stock_market_slot.py
test/: test_bank.py  test_game_state.py  test_main.py  test_player.py  test_private_company.py
tests/: __init__.py  _parity_diag.py  bench_engines.py  cleaning_diff.py  decode_parity_check.py  game_test.py  index_parity_corpus.py  parity_runner.py  profile_mcts.py  test_atomic_io.py  test_factored_action_helper.py  test_factored_action_helper_rust_parity.py  test_index_parity_regression.py  test_parity_gates_fast.py  (+10 more)
(+194 files in other folders)
