[project]
name = "rl18xx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gymnasium>=1.1.1",
    "ipykernel>=6.29.5",
    "ipython>=9.1.0",
    "pytest-mock>=3.14.0",
    "torch>=2.6.0",
    "torch-geometric>=2.6.1",
]

[tool.pytest.ini_options]
addopts = "--tb=line"
testpaths = [
    "tests",
]

[tool.black]
line-length = 120
