[project]
name = "rl18xx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.1",
    "gunicorn>=23.0.0",
    "gymnasium>=1.1.1",
    "ipykernel>=6.29.5",
    "ipython>=9.1.0",
    "ipywidgets>=8.1.7",
    "lmdb>=1.6.2",
    "lz4>=4.4.4",
    "matplotlib>=3.10.3",
    "numpy>=2.2.4",
    "scipy>=1.15.3",
    "tensorboard>=2.19.0",
    "torch>=2.6.0",
    "torch-geometric>=2.6.1",
    "torch-tb-profiler>=0.4.3",
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:`torch.jit.script` is deprecated:DeprecationWarning",
]

[build-system]
requires = ["maturin>=1.12.6"]
build-backend = "maturin"

[tool.maturin]
manifest-path = "engine-rs/Cargo.toml"
profile = "release"

[tool.uv]
# Include Rust sources in cache key so uv invalidates its cached wheel
# when .rs files change (otherwise only pyproject.toml/Python changes trigger rebuild)
cache-keys = [{ file = "engine-rs/src/**/*.rs" }, { file = "engine-rs/Cargo.toml" }]

[tool.black]
line-length = 120

[dependency-groups]
dev = [
    "maturin>=1.12.6",
]
