[package]
name = "engine-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "engine_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.24", features = ["extension-module", "multiple-pymethods"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
numpy = "0.24"
rand = "0.8"
rand_distr = "0.4"
