[package]
name = "engine-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "engine_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.24", features = ["multiple-pymethods"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
numpy = "0.24"
rand = "0.8"
rand_distr = "0.4"

[features]
# The wheel build (maturin / `uv sync`) uses the default features and so
# compiles as a Python extension module. `cargo test --no-default-features`
# drops extension-module so the test binary can link against libpython.
default = ["extension-module"]
extension-module = ["pyo3/extension-module"]
